# qnt-interpreter

./: Cargo.toml  README.md  test.wasm  test.wat  typos.toml
.github/workflows/: rust.yml
benches/: fib.rs
src/: ast.rs  closure.rs  jit.rs  lib.rs  main.rs  str.rs  tree.rs  vm.rs  wasm.rs
