[package]
name = "qnt-interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
fxhash = "0.2.1"
color-eyre = "0.6"
cranelift = { version = "0.113.1", features = ["module", "jit", "native"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fib"
harness = false

[profile.release]
lto = true
