[package]
name = "qnt-interpreter"
version = "0.1.0"
edition = "2021"

[features]
tree = []
closure = []
vm = []
jit = ["dep:cranelift"]
wasm = ["dep:wasmtime"]

[dependencies]
fxhash = "0.2.1"
color-eyre = "0.6"
cranelift = { version = "0.114.0", features = ["module", "jit", "native"], optional = true }
wasmtime = { version = "27.0.0", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fib"
harness = false

[profile.release]
lto = true
